initated nav and footer design

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Tigers Cry Too</title>
+</head>
+<body>
+    <nav>
+        <!--Shold be red brush strokes-->
+        <h1>Tigers Cry Too</h1>
+        <ul>
+            <li><a href="#">Mental Health</a></li>
+            <li><a href="#"></a></li>
+        </ul>
+        <!-- mobilenavbtn-->
+    </nav>
+    <footer>
+        <h1>Tigers Cry Too</h1>
+        <h6>name?</h6>
+        <ul>
+            <li>Linkedin</li>
+            <li>Instagram</li>
+        </ul>
+    </footer>
+</body>
+</html>
+<!--
+Tigers cry too is going to be a website that has a shopping cart. The main motivation behind the name is that strong people (tigers) can still cry and that's ok.  
 
+It's a loose sketchy, intentionally non realistic style.  So the colors for the site and the feel of the site should feel like her art.
+
+On the home page there needs to be a page where they go to submit ideas for her to make a commissioned piece. Maybe it's a simple form, maybe there are some questions about what they want drawn or painted.  Maybe there are some reference images to help them describe what they want.
+
+There needs to be a shopping cart page with a good number of items that she can swap out as she makes new material.
+
+There needs to be a mental health page where she shares advice or her journey and links to other resources. 
+
+The home page needs to have links to her social media - I'm not sure what platforms she is on besides linkedin and instagram.
+-->
