--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <footer>
         <h1>Tigers Cry Too</h1>
-        <h6>name?</h6>
+        <h6>Lita Lestrange</h6>
         <ul>
             <li>Linkedin</li>
             <li>Instagram</li>
