work on footer, nav and form

--- a/index.html
+++ b/index.html
@@ -12,30 +12,42 @@
         <h1>Tigers Cry Too</h1>
         <ul>
             <li><a href="#">Mental Health</a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#">Ideas</a></li>
+            <li><a href="#">Cart</a></li>
         </ul>
         <!-- mobilenavbtn-->
     </nav>
+    <section class="form">
+        <div>
+            <h1>Submit your ideas</h1><br>
+            <p>Fill out the form below to submit your ideas for a commissioned piece.</p>
+        </div>
+        <div class="line"></div>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffbMg8Y9iSSwO3aAxY_hY3nn_ns6Uc6pu0lghfxH1gX1aPaA/viewform?embedded=true" 
+        width="640" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </section>
     <footer>
         <h1>Tigers Cry Too</h1>
-        <h6>Lita Lestrange</h6>
         <ul>
-            <li>Linkedin</li>
-            <li>Instagram</li>
+            <li><a><img src="images/linkedin.webp" alt="Linkedin logo"></a></li>
+            <li><a href="https://www.instagram.com/tigerscrytoo/"><img src="images/insta.png" alt="instagram logo"></a></li>
         </ul>
     </footer>
 </body>
 </html>
 <!--
-Tigers cry too is going to be a website that has a shopping cart. The main motivation behind the name is that strong people (tigers) can still cry and that's ok.  
+Tigers cry too is going to be a website that has a shopping cart.
+The main motivation behind the name is that strong people (tigers) can still cry and that's ok.  
 
-It's a loose sketchy, intentionally non realistic style.  So the colors for the site and the feel of the site should feel like her art.
+It's a loose sketchy, intentionally non realistic style.
+So the colors for the site and the feel of the site should feel like her art.
 
-On the home page there needs to be a page where they go to submit ideas for her to make a commissioned piece. Maybe it's a simple form, maybe there are some questions about what they want drawn or painted.  Maybe there are some reference images to help them describe what they want.
+On the home page there needs to be a page where they go to submit ideas for her to make a commissioned piece. Maybe it's a simple form, maybe there are some questions about what they want drawn or painted.
+Maybe there are some reference images to help them describe what they want.
 
 There needs to be a shopping cart page with a good number of items that she can swap out as she makes new material.
 
 There needs to be a mental health page where she shares advice or her journey and links to other resources. 
 
-The home page needs to have links to her social media - I'm not sure what platforms she is on besides linkedin and instagram.
+The home page needs to have links to her social media - Linkedin, Instagram, and maybe a few others.
 -->
