work on form inplementation and fixing design issues

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_drop_down" />    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=close" />
     <link rel="stylesheet" href="css/style.css">
     <title>Tigers Cry Too</title>
 </head>
@@ -15,24 +18,40 @@
             <li><a href="#">Ideas</a></li>
             <li><a href="#">Cart</a></li>
         </ul>
-        <!-- mobilenavbtn-->
+        <!-- <span class="material-symbols-outlined">
+menu
+</span>
+
+<span class="material-symbols-outlined">
+close
+</span>
+-->
     </nav>
-    <section class="form">
-        <div>
-            <h1>Submit your ideas</h1><br>
+    <section class="formdrop">
+        <div id="form-dropdown">
+            <h3>Submit your ideas</h3>
             <p>Fill out the form below to submit your ideas for a commissioned piece.</p>
+            <span class="material-symbols-outlined">
+                arrow_drop_down
+            </span>
         </div>
         <div class="line"></div>
+    </section>
+    <section id="form" class="none">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffbMg8Y9iSSwO3aAxY_hY3nn_ns6Uc6pu0lghfxH1gX1aPaA/viewform?embedded=true" 
-        width="640" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+         frameborder="0" marginheight="0" marginwidth="0" height="800" id="ideaform">Loading…</iframe>
     </section>
     <footer>
-        <h1>Tigers Cry Too</h1>
+        <div>
+            <h2>Tigers Cry Too</h2>
+            <p>Website by <a href="benedictnewton.me">Benedict Newton</a></p>
+        </div>
         <ul>
             <li><a><img src="images/linkedin.webp" alt="Linkedin logo"></a></li>
             <li><a href="https://www.instagram.com/tigerscrytoo/"><img src="images/insta.png" alt="instagram logo"></a></li>
         </ul>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
 <!--
